--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,9 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <title><%= htmlWebpackPlugin.options.title %></title>
         <body>
-            Serverless Floripa!
+            <div class='container'>
+                Serverless Floripa!
+            </div>
         </body>
     </head>
 </html>
