Preparing form request

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
                     </div>
                     <div class="content">
                         <div class="information">
-                            <form method="POST" action="/invite" id="join-form" class="form">
+                            <form method="POST" id="join-form" class="form">
                                 <input type="text" name="email" placeholder="Enter Your Email Address" id="slack-email" class="field">
                                 <input type="submit" value="Join" class="submit">
                             </form>
