Response message container

--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,7 @@
                                 <input type="text" name="email" placeholder="Enter Your Email Address" id="slack-email" class="field">
                                 <input type="submit" value="Join" class="submit">
                             </form>
+                            <span class="app-feedback"></span>
                         </div>
                     </div>
                 </div>
